Añadido controlador para el Festival de Olmué
